--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,10 @@ dependencies:
   image_picker: ^0.6.5+3
   firebase_storage: ^3.1.6 
   firebase_messaging: ^6.0.16
-  
-  
+  firebase_core: ^0.4.5
+  bottom_navy_bar: ^5.3.2
+  mobile_number: ^1.0.2
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
@@ -57,9 +59,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+assets:
+  - lib\assets\farmhouse1.png
+  - lib\assets\flats.png
+  
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
