--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   firebase_core: ^0.4.5
   bottom_navy_bar: ^5.3.2
   mobile_number: ^1.0.2
+  uuid: ^2.2.0
+  provider: ^4.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
